# jsonify

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  Dockerfile  Makefile  README.rst  app.env.example  compose-mysql.env.example  config.py  docker-compose.yml  entrypoint.sh  jsonify.py  requirements.txt  runner.py  setup.cfg  setup.py  wsgi.py
.github/workflows/: main.yml
addon/: __init__.py  addon_settings.py  app.py  client_factory.py  config.py  flow.py  models.py
addon/api/: events.py  organizations.py  resources.py
addon/main/: errors.py
addon/processors/: organization.py
addon/resource_fields/: parser.py
app/: __init__.py  exceptions.py  models.py
app/api/: __init__.py  connections.py  events.py  organizations.py  prefill.py  resources.py  settings.py  webhooks.py
app/main/: __init__.py  errors.py  views.py
app/sdk/: collections.py  exceptions.py
app/templates/: 400.html  403.html  404.html  500.html  503.html  base.html  error.html
bot/: __init__.py  app.py  authenticator.py  client.py  config.py  exceptions.py  flow.py  json.py  models.py  settings.py
bot/api/: __init__.py  events.py  organizations.py  (+1 more)
docs/: installation.rst
jsonify/: __init__.py  addon_settings.py  app.py  authenticator.py  client_factory.py  config.py  exceptions.py  flow.py  json.py  models.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docker.in  requirements-docker.txt  requirements.in  requirements.txt
samples/: example.json
tests/: __init__.py  conftest.py  test_basics.py  test_bot.py
(+43 files in other folders)
