# This file is part of the Jsonify.
#
# Copyright (C) 2021 Serghei Iakovlev <egrep@protonmail.ch>
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.

[metadata]
license_file = LICENSE
description-file = README.rst
long_description_content_type = text/x-rst

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests
addopts = --verbose

[flake8]
exclude=.git,__pycache__,.pytest_cache,.venv,build,dist,.eggs
application-import-names=bot,tests
import-order-style=smarkets
max-complexity = 10

[coverage:run]
branch = True
source =
    bot
